spacing and events expanded bug

--- a/client/styles/events.css
+++ b/client/styles/events.css
@@ -197,7 +197,7 @@ footer{
 
 #postUsername{
     margin-left: 20px;
-    margin-top: 40px;
+    margin-top: 5px;
 }
 
 .box{
